updates to basic cookie implementation, JSON is in platform core and not included if global JSON is already defined, max-age = 0 is treated as permanent cookie, almost ready to start adding tests and getting feature requests from end user requirements

--- a/build.xml
+++ b/build.xml
@@ -127,6 +127,7 @@
             <fileset dir="${SRC_DIR}" includes="platform/core/dom.js" />
             <fileset dir="${SRC_DIR}" includes="platform/core/event.js" />
             <fileset dir="${SRC_DIR}" includes="platform/core/html.js" />
+            <fileset dir="${SRC_DIR}" includes="platform/core/json.js" />
             <fileset dir="${SRC_DIR}" includes="platform/core/timer.js" />
             <fileset dir="${SRC_DIR}" includes="platform/core/urlparse.js" />
             <fileset dir="${SRC_DIR}" includes="platform/core/xhr.js" />
