add patches from jorge ventura to complete form and link following behavior for windows and forms. will be tagged 1.2.17

--- a/build.xml
+++ b/build.xml
@@ -582,6 +582,7 @@
             <fileset dir="${SRC_DIR}" includes="common/__setArray__.js" />
             <fileset dir="${SRC_DIR}" includes="common/__trim__.js" />
             <fileset dir="${SRC_DIR}" includes="xhr/document.js" />
+            <fileset dir="${SRC_DIR}" includes="xhr/a.js" />
             <fileset dir="${SRC_DIR}" includes="xhr/form.js" />
             <fileset dir="${SRC_DIR}" includes="xhr/location.js" />
             <fileset dir="${SRC_DIR}" includes="xhr/xmlhttprequest.js" />
