nested frames new have a correct parent relationship.  added referer header for http requests where window document will be exchanged.  thanks to jorge ventura for finding these issues.  also added example for svg rendering to jpg with batik

--- a/build.xml
+++ b/build.xml
@@ -173,6 +173,7 @@
             <fileset dir="${SRC_DIR}" includes="platform/rhino/dom.js" />
             <fileset dir="${SRC_DIR}" includes="platform/rhino/event.js" />
             <fileset dir="${SRC_DIR}" includes="platform/rhino/html.js" />
+            <fileset dir="${SRC_DIR}" includes="platform/rhino/svg.js" />
             <fileset dir="${SRC_DIR}" includes="platform/rhino/parser.js" />
             <fileset dir="${SRC_DIR}" includes="platform/rhino/timer.js" />
             <fileset dir="${SRC_DIR}" includes="platform/rhino/xhr.js" />
