1. replaced deprecated node API calls with recommended ones. 2. added local_settings.js, which is missing in the original distribution of envjs. 3. added test_run.sh, an example runner.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ htmlparser/gwt2/gwt-*
 htmlparser/gwt2/war
 htmlparser/gwt2/*/*/*/*/*/*.class
 
-local_settings.js
+# local_settings.js
 java_pid*
 
 # gpsee compiled js files
